# ai-2048

./: .env.example  .gitignore  README.md  logging_config.json  pyproject.toml
src/ai_2048/: config.py  logic.py  main.py  site_config.py  vision.py
tests/: test_vision.py
