[project]
name = "ai-2048"
version = "2026.6.17"
description = "Autonomous 2048 game player using Playwright and Qwen-VL"
authors = [
    { name = "gil9red", email = "ilya.petrash@inbox.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
